# PtychoTorch

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: python-app.yml
ptychotorch/: data_structures.py  forward_models.py  image_proc.py  io_handles.py  math.py  maths.py  propagation.py  utils.py
ptychotorch/reconstructors/: __init__.py  ad_general.py  ad_lsqml.py  ad_ptychography.py  base.py  epie.py  lsqml.py
ptytorch/: data_structures.py  forward_models.py  image_proc.py  io_handles.py  metrics.py  reconstructors.py  utils.py
ptytorch/reconstructors/: __init__.py  ad_general.py  base.py  epie.py  lsqml.py
tests/: conftest.py  generate_gold_data_for_all.sh  test_2d_ptycho_autodiff.py  test_2d_ptycho_epie.py  test_2d_ptycho_lsqml.py  test_utils.py
tests/data/2d_ptycho/: metadata_250_nominalPos.hdf5  metadata_250_truePos.hdf5
workspace/tungsten/: reconstruct.py  reconstruct_ad.py  reconstruct_lsqml.py
workspace/tungsten/data/: metadata_250_nominalPos.hdf5  metadata_250_truePos.hdf5
